# RefExternalKG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dataset/: data_dbpedia_e.csv  data_dbpedia_v_add.csv  gar_discover.yaml  gar_e_set.csv  gar_t_set.csv  gar_v_set.csv  gar_x_set.csv  gar_y_set.csv  inc_data_dbpedia_e.csv  inc_dbpedia.erfile  inc_gar_discover.yaml  inc_knowledge_dbpedia_e.csv  knowledge_dbpedia_e.csv  knowledge_dbpedia_v.csv
include/gar/: csv_gar.h  gar.h  gar_chase.h  gar_imply.h  gar_match.h  gar_supp.h  gpar_new.h  literal.h  literal_info.h  literal_stand_alone_info.h  literalset.h  ml_literal.h  multi_gar_supp.h  same_gar.h
include/libgrape-lite/examples/analytical_apps/: run_app.cc
include/libgrape-lite/examples/gnn_sampler/: run_sampler.cc
include/libgrape-lite/grape/: types.h  util.h
include/libgrape-lite/grape/communication/: shuffle.h
include/libgrape-lite/grape/fragment/: basic_fragment_loader.h  e_fragment_loader.h  ev_fragment_loader.h  immutable_edgecut_fragment.h
include/libgrape-lite/grape/graph/: edge.h
include/prob_gar/: csv_prob_gar.h  prob_gar.h  prob_gar_anytime_chase.h  prob_gar_chase.h  prob_gar_chase_backward.h
include/util/: file.h  is_number.h  load_gar_path.h  load_graph.h  load_pattern.h  load_rule.h  log.h  yaml_config.h
misc/: AggregateRules.cc  GetDeletionAffectedPivots.cc
src/: types.h
src/apps/: flags.cc  flags.h  fragment2gundam.h  fragment_graph.h  fragment_graph_with_index.h  gar_discover.cc  gar_discover.h  inc_gar_discover.cc  inc_gar_discover.h  run_app.cc  run_app.h  timer.h  tools.cc
src/apps/rule_discover/: gar_discover.h  gar_discover_context.h  inc_gar_discover.h  inc_gar_discover_context.h
src/apps/rule_discover/gar_discover/: expand_literal.h  expand_pattern.h  expand_tree.h  export_gar.h  gar_dfs_code.h  generate_tree.h  graph_package.h  has_match.h  horizontal_expand_with_intermedia_result.h  merge_pattern.h  restriction.h  serialize.h
src/apps/test/: test.h  test_context.h
src/apps/tools/: gar_info_collection.h  gar_set_to_gar.h  gar_to_gar_set.h  graph_statistic_collection.h  tools_info.h  yaml_config.h
